# parallelprogramming

./: .gitignore  .gitmodules  README.md
2016/suren_enfiajyan/: parallelVectorDistanceCounterEngine.cpp  vectorDistanceCore.cpp  vectorDistanceCore.h
2017/arbela_muradova/: CSVParser.cpp  CSVParser.h  Calculation.cpp  Calculation.h  DataGenerator.cpp  DataGenerator.h  Distance.cpp  Distance.h  Source.cpp
2017/david_oganov/: AssemblyInfo.cs  DistanceCalculator.cs  DistanceCalculator.csproj  DistanceCalculator.sln  IDistanceCalculator.cs  IInitializer.cs  Initializer.cs  Vector.cs
2017/liliana_gabrielyan/: Create.cpp  Create.h  Distance.h  DistanceCalc.sln  DistanceCalc.vcxproj  DistanceCalc.vcxproj.filters  HammingDistance.cpp  Input.cpp  Input.h  L1Distance.cpp  L2Distance.cpp  Source.cpp
2017/nare_matevosyan/: READ ME!.txt
2019/mher_ghazaryan/: CMakeLists.txt  calculation_engine.h  distance_calculator.h  distance_engine.h  engines.h  main.cpp  stopwatch.h  technique_engine.h
andranik_melikyan/: .gitignore  andranik_melikyan.sln
andranik_melikyan/distcal/: config.cpp  config.h  dataset.cpp  dataset.h  distcal.vcxproj  distcal.vcxproj.filters  logfile.txt  main.cpp  process.cpp  process.h  version.h
david_demirkhanyan/ParallelProgramming/: ParallelProgramming.sln
david_demirkhanyan/ParallelProgrammingDemo/: ParallelProgrammingDemo.sln
samvel_petrosov/DistanceCalculator/: DistanceCalculator.sln
suren_enfiajyan/: main.cpp  parallelVectorDistanceCounterEngine.h
vladimir_badalyan/ParrallelVectorDistance/: CommandEngine.cpp  CommandEngine.hpp
(+182 files in other folders)
